--- a/__fixtures__/changed_html.html
+++ b/__fixtures__/changed_html.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><html lang="ru"><head>
+<!DOCTYPE html>
+<html lang="ru"><head>
     <meta charset="utf-8">
     <title>Курсы по программированию Хекслет</title>
     <link rel="stylesheet" media="all" href="https://cdn2.hexlet.io/assets/menu.css">
@@ -12,5 +13,5 @@
     </h3>
     <script src="https://js.stripe.com/v3/"></script>
     <script src="https://ru.hexlet.io/packs/js/runtime.js"></script>
-  
-</body></html>
+  </body>
+</html>
